--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^5.3.3",
     "react-bootstrap": "^2.10.7",
     "react-icons": "^5.4.0",
-    "react-router": "^7.1.1"
+    "react-router": "^7.1.1",
+    "react-select": "^5.9.0"
   }
 }
